src/index.css
:root {
  --background-color: #8BAAAD;
  --error-color: #ad948b;
  --margin-factor: 3;
}

body {
  margin: 0;
  font-family: Verdana, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  background-color: var(--background-color);
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

select,
input:not([type="submit"]) {
  margin-right: 9px;
}

/* TODO: improve styling for invalid inputs */
input:invalid {
  border-color: var(--error-color);
}
input:invalid:focus,
input:invalid:focus-visible {
  outline: solid var(--error-color);
}

div.container {
  max-width: 650px;
  text-align: center;
  margin: 1rem auto;
  overflow: auto;
  padding: 0px;
}

/* probably better to do this with flexbox */
span.container-row {
  display: block;
  margin-bottom: calc(5px * var(--margin-factor));
}

